Adding tests for default story and also trying to track down why it's still making multiple stories if two players iterate on the same text for a story